--- a/README
+++ b/README
@@ -1,8 +1,14 @@
+Building the system
+====================
+
 Need to build repo rcs first
 
 ./configure --with-llvmsrc=`llvm-config --src-root` --with-llvmobj=`llvm-config --obj-root` --with-rcssrc=<rcs srouce directory> --with-rcsobj=<rcs object directory> --prefix=`llvm-config --prefix`
 make
 make install
+
+Running the system
+====================
 
 From now on in this manual, we assume the program name is hello, and the alias
 analysis we are checking is basicaa.
@@ -11,17 +17,22 @@ Generate a bitcode file using clang 3.0
 clang++ hello.cpp -o hello.bc -c -emit-llvm
 
 Online mode
-dynaa_insert_alias_checker.py hello basicaa [--inline]
-If --inline is specified, the output executable is hello.inlined; otherwise,
-the output executable is hello.alias_checker.
-Run the output executable. If it aborts or fails asserts, there is an error in
-the alias analysis we are checking.
+--------------------
+dynaa_insert_alias_checker.py hello basicaa
+
+If --disable-inline is specified, the alias checks will not be inlined, and
+will be linked in the codegen phase. If --disable-opt is specified, the script
+will not run the standard compiler optimizations (-O3).  Run the output
+executable (hello.ac). If it aborts or fails asserts, there is an error in the
+alias analysis we are checking.
 
 Offline mode
+--------------------
 dynaa_hook_mem.py hello
 ./hello.inst
 mv /tmp/pts hello.pts
 dynaa_check_aa.py hello.bc hello.pts basicaa
 
 Utilities
+--------------------
 dynaa_dump_log -log-file hello.pts > hello.log
